src/objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_End_Time__c</fullName>
        <label>Agent End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agent_Transfer_Time__c</fullName>
        <label>Agent Transfer Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bot_First_Owner_Id__c</fullName>
        <description>The ID of the first owner of the Chat Transcript.</description>
        <externalId>true</externalId>
        <label>Bot First Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bot_Name__c</fullName>
        <label>Bot Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Description__c</fullName>
        <label>Case Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Descrption__c</fullName>
        <label>Case Descrption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chatbot</fullName>
                </value>
                <value>
                    <fullName>Chatbot - Agent</fullName>
                </value>
                <value>
                    <fullName>Voice</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Chatbox - Agent</fullName>
                    <isActive>false</isActive>
                    <label>Chatbox - Agent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <label>Case Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SLA__c</fullName>
        <label>Case SLA</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>This field will be used to integrate with externa systems. The main reason of this field was to link Voice with Live Chat Record.</description>
        <displayFormat>{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>External Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Dialog_For_Categorisation__c</fullName>
        <label>Latest Dialog For Categorisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Country_Code__c</fullName>
        <label>Notification Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Language_Code__c</fullName>
        <label>Notification Language Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <description>Skill names from the associated requirement</description>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type2__c</fullName>
        <label>Sub-Type2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_Email__c</fullName>
        <label>Supplied Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voice_Call__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voice Call</label>
        <referenceTo>VoiceCall</referenceTo>
        <relationshipLabel>Chat Transcripts</relationshipLabel>
        <relationshipName>Chat_Transcripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>Status</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Case_Unknown_LiveChatTranscript</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Case Unknown</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Live_Agent_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Live Agent</label>
        <queue>Live_Agent</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>